# ww_utils

./: .gitignore  LICENSE.txt  README.md  app.py
build-nix-agent/: README.md  build.sh
build-nix-agent/src/DEBIAN/: control
build-nix-agent/src/usr/share/applications/: ww-capture-agent.desktop
capture/: app.py  pyproject.toml
capture/docs/: README.md
